Try to generate gorm compatible struct and see if it works with gorm
