# gen/models/user_info.go
@@ -1,83 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// UserInfo User info
-//
-// swagger:model UserInfo
-type UserInfo struct {
-
-	// deleted
-	Deleted bool `json:"deleted,omitempty" db:"Deleted"`
-
-	// name
-	Name string `json:"name,omitempty" db:"Name"`
-
-	// password
-	Password string `json:"password,omitempty" db:"Password"`
-
-	// phone
-	Phone string `json:"phone,omitempty" db:"Phone"`
-
-	// username
-	// Required: true
-	Username string `json:"username" db:"Username"`
-}
-
-// Validate validates this user info
-func (m *UserInfo) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateUsername(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *UserInfo) validateUsername(formats strfmt.Registry) error {
-
-	if err := validate.RequiredString("username", "body", m.Username); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this user info based on context it is used
-func (m *UserInfo) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *UserInfo) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *UserInfo) UnmarshalBinary(b []byte) error {
-	var res UserInfo
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
