# gen/models/user_login.go
@@ -1,0 +1,66 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"go-swagger-example/mymodels"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// UserLogin User login information
+//
+// swagger:model UserLogin
+type UserLogin struct {
+
+	// audit model
+	AuditModel mymodels.AuditModel `json:"auditModel,omitempty"`
+
+	// email
+	Email string `json:"email"`
+
+	// gorm model
+	GormModel mymodels.GormModel `json:"gormModel,omitempty"`
+
+	// login name
+	LoginName string `json:"loginName"`
+
+	// password hash
+	PasswordHash string `json:"passwordHash"`
+
+	// user Id
+	UserID uint32 `json:"userId,omitempty"`
+}
+
+// Validate validates this user login
+func (m *UserLogin) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this user login based on context it is used
+func (m *UserLogin) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UserLogin) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UserLogin) UnmarshalBinary(b []byte) error {
+	var res UserLogin
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
